changed button wrapping of nav links so tabbing works correctly, set titles to uppercase for nav links and added padding, added maze options ui is open to prevent following cursor on menu interactions, added key to stroke cap options, added ui preferences store to expand sidebar to toggle state to be references elsewhere

--- a/src/views/Header/Header.module.scss
+++ b/src/views/Header/Header.module.scss
@@ -4,6 +4,8 @@
 .NavLink{
   text-decoration: none;;
   color: white;
+  padding: 1rem;
+  font-size: 1rem;
   &:hover{
     color: tan;
   }
